--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.3.2",
     "pinia": "^2.3.0",
+    "primevue": "^4.3.2",
+    "tailwindcss-primeui": "^0.5.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
