--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@primevue/themes": "^4.3.2",
     "pinia": "^2.3.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
     "tailwindcss-primeui": "^0.5.1",
     "vue": "^3.5.13",
