--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/forms": "^4.3.2",
     "@primevue/themes": "^4.3.2",
     "pinia": "^2.3.0",
+    "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
+    "tailwindcss": "^4.0.14",
     "tailwindcss-primeui": "^0.5.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
