--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "@primevue/forms": "^4.3.2",
     "@primevue/themes": "^4.3.2",
     "pinia": "^2.3.0",
-    "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.2",
-    "tailwindcss": "^4.0.14",
     "tailwindcss-primeui": "^0.5.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.14",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
@@ -37,14 +36,17 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "cypress": "^13.17.0",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.9",
+    "tailwindcss": "^4.0.14",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
